--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-        id="com.example.hello"
-        version="0.7.0">
+        id="enterprises.nucleus.plugin.msp_bt"
+        version="0.0.1">
 
   <name>Hello</name>
 
@@ -11,7 +11,7 @@
 
   <asset src="www/msp_bt.js" target="js/msp_bt.js"/>
 
-  <js-module src="www/msp_bt.js" name="hello">
+  <js-module src="www/msp_bt.js" name="msp_bt">
     <clobbers target="msp_bt" />
   </js-module>
 
@@ -23,7 +23,7 @@
       </feature>
     </config-file>
 
-    <source-file src="src/android/Hello.java" target-dir="src/com/example/plugin/"/>
+    <source-file src="src/android/msp_bt.java" target-dir="src/com/example/plugin/"/>
   </platform>
 
 </plugin>
