--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
-        id="enterprises.nucleus.msp_bt"
+        id="cordova-plugin-multiwii-bluetooth"
         version="0.0.1">
 
   <name>Msp_bt</name>
@@ -19,11 +19,26 @@
 
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="Msp_bt">
-        <param name="android-package" value="enterprises.nucleus.plugin.Msp_bt"/>
+        <param name="android-package" value="enterprises.nucleus.plugins.multiwii_bluetooth.Msp_bt"/>
       </feature>
     </config-file>
 
-    <source-file src="src/android/Msp_bt.java" target-dir="src/enterprises/nucleus/plugin/"/>
+    <source-file src="src/android/Msp_bt.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth"/>
+	
+      <!-- Java Library Sources -->
+      <!-- sources for package: enterprises.nucleus.plugins.multiwii_bluetooth.comms -->
+    <source-file src="src/android/comms/Bluetooth2Serial.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth/comms"/>
+    <source-file src="src/android/comms/BT.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth/comms"/>
+    <source-file src="src/android/comms/BT_New.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth/comms"/>
+    <source-file src="src/android/comms/Communication.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth/comms"/>
+    <!-- <source-file src="src/android/comms/EZGUI.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth/comms"/> -->
+    <source-file src="src/android/comms/MultiCapability.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth/comms"/>
+    <source-file src="src/android/comms/MultirotorData.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth/comms"/>
+    <source-file src="src/android/comms/MultiWii230NAV.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth/comms"/>
+    <source-file src="src/android/comms/ServoConfClass.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth/comms"/>
+    <source-file src="src/android/comms/SimpleQueue.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth/comms"/>
+    <source-file src="src/android/comms/Waypoint.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth/comms"/>
+		
   </platform>
 
 </plugin>
