--- a/plugin.xml
+++ b/plugin.xml
@@ -21,11 +21,39 @@
       <feature name="Msp_bt">
         <param name="android-package" value="enterprises.nucleus.plugins.multiwii_bluetooth.Msp_bt"/>
       </feature>
+	  
+		<feature name="GoogleMaps">
+			<param name="android-package" value="plugin.google.maps.GoogleMaps" />
+		</feature>
+		<feature name="External">
+			<param name="android-package" value="plugin.google.maps.External" />
+		</feature>
+		<feature name="Geocoder">
+			<param name="android-package" value="plugin.google.maps.MyGeocoder" />
+		</feature>
+			
     </config-file>
 
 	<config-file target="AndroidManifest.xml" parent="/manifest">
         <uses-permission android:name="android.permission.BLUETOOTH" />
+		
+			<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+            <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+
     </config-file>
+
+
+        <framework src="com.google.android.gms:play-services-maps:+" />
+        <framework src="com.google.android.gms:play-services-location:+" />
+
+		<config-file target="AndroidManifest.xml" parent="/manifest/application">
+            <meta-data
+              android:name="com.google.android.maps.v2.API_KEY"
+              android:value="$API_KEY_FOR_ANDROID" />
+            <!-- Google Play Services SDK -->
+            <meta-data android:name="com.google.android.gms.version"
+                       android:value="@integer/google_play_services_version" />
+        </config-file>
 		
     <source-file src="src/android/Msp_bt.java" target-dir="src/enterprises/nucleus/plugins/multiwii_bluetooth"/>
 	
